--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "setup-demo": "node scripts/setupDemo.js",
+    "create-demo-data": "node scripts/createDemoData.js"
   },
   "keywords": [
     "healthcare",
