--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,1 +1,20 @@
+# Ignore node_modules, as they will be installed within the container
+node_modules
 
+# Ignore build artifacts, as they will be generated within the container
+build
+
+# Ignore local environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Ignore Git files
+.git
+.gitignore
+
+# Ignore npm debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
