--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.294.0",
-    "qrcode.react": "^3.1.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
